--- a/src/real-estate-pp/scraper/scraper.csproj
+++ b/src/real-estate-pp/scraper/scraper.csproj
@@ -57,8 +57,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Control\Controller.cs" />
+    <Compile Include="Crawler\Crawler.cs" />
+    <Compile Include="Dependency\AppContext.cs" />
+    <Compile Include="Dependency\App.cs" />
+    <Compile Include="Extensions\Parsing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scraper\Scraper.cs" />
     <Compile Include="Tests\Tests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +77,7 @@
       <Name>dbdriver</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.83.0.4103.3900\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.83.0.4103.3900\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
