--- a/src/real-estate-pp/repplib/repplib.csproj
+++ b/src/real-estate-pp/repplib/repplib.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Dependency\App.cs" />
     <Compile Include="Dependency\AppContext.cs" />
+    <Compile Include="Extensions\Collections.cs" />
     <Compile Include="Extensions\Logging.cs" />
     <Compile Include="Extensions\Parsing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
