--- a/src/real-estate-pp/predictor/predictor.csproj
+++ b/src/real-estate-pp/predictor/predictor.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Control\Controller.cs" />
+    <Compile Include="LinearRegression\LinearRegressor.cs" />
+    <Compile Include="Preprocessing\Location.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\Queries.cs" />
