--- a/src/real-estate-pp/predictor/predictor.csproj
+++ b/src/real-estate-pp/predictor/predictor.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="Control\Controller.cs" />
     <Compile Include="LinearRegression\LinearRegressor.cs" />
+    <Compile Include="NearestNeighbors\Category.cs" />
+    <Compile Include="NearestNeighbors\kNN.cs" />
     <Compile Include="Preprocessing\Location.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +80,7 @@
       <Name>repplib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.83.0.4103.3900\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.83.0.4103.3900\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
