--- a/src/real-estate-pp/repplib/repplib.csproj
+++ b/src/real-estate-pp/repplib/repplib.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Extensions\Math2.cs" />
     <Compile Include="Extensions\Parsing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structures\Heap.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dbdriver\dbdriver.csproj">
